# iluvatar-faas

./: .gitignore  LICENSE  README.md  Release-notes.md  broken_channel.md  call_graphs.md  debugging_badenforcement.md  main.org  pid_generation.md
src/Ilúvatar/: .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  Makefile  README.md  TODO.md  Test.Dockerfile  adding_a_new_policy.md  apply_sed.sh  capturing_cgroup_id.md  capturing_per_func_metrics_cp.md  clippy.toml  collecting_schedstats.md  constraining_user_space_policy.md  issue_bpf_obj_threadsafety.md  issue_lavd_not_running.md  issue_slow_invocation.md  reading_cgroup_stuff.md  setup.sh  shared_map.md  simple_setup.sh  todo.md  worker_function_benchmarks.json
src/Ilúvatar/.cargo/: config.toml
src/Ilúvatar/ansible/: .gitignore  clean.yml  controller.yml  graphite.yml  iluvatar.yml  ilúvatar.yml  influx.yml  reqs.txt  worker.yml  worker_jetson.yml  worker_laptop.yml  worker_perf.yml  worker_perf_affinity.yml
src/Ilúvatar/ansible/group_vars/: all.yml  host_addresses.yml  jetson.yml
src/Ilúvatar/docs/: ANSIBLE.md  API.md  CLI.md  CONFIG.md  CONTROLLER.md  DESIGN.md  DEV.md  DOCS.md  ENERGY.md  FAQs.md  FLAME.md  FUNCTIONS.md  LOAD.md  README.md  RESEARCH.md  SETUP.md  WORKER.md  setup.sh
src/Ilúvatar/docs/TODOs/: BUGS.md  TODO.md
src/Ilúvatar/docs/examples/: .gitignore  README.md  experiment_setup.sh  sample_setup.sh  start_worker.sh
src/Ilúvatar/docs/imgs/: design.odg
src/Ilúvatar/fine_policies/locality_enforced/: .gitignore  design.md
src/Ilúvatar/fs_policy_constrained/: Cargo.toml  README.md  docker_cnamespace_issue.md  investigating_no_consume.md  pushing_pids_from_bpf.md  task_to_cgroupid.md
src/Ilúvatar/fs_policy_constrained/src/: bpf.rs  main.rs
src/Ilúvatar/fs_policy_fifo/: Cargo.toml  cgroup_issue.md  todo.md
src/Ilúvatar/fs_policy_fifo/examples/: pids.csv
src/Ilúvatar/fs_policy_fifo/src/: bpf.rs  main.rs
src/Ilúvatar/fs_policy_lavd/: Cargo.toml  bpf_patterns.md  understanding_lavd.md  understanding_pair.md
src/Ilúvatar/fs_policy_lavd/src/: main.rs
src/Ilúvatar/fs_policy_locality/: Cargo.toml  build.rs
src/Ilúvatar/fs_policy_locality/src/: main.rs
src/Ilúvatar/fs_policy_power_of_two/: Cargo.toml  build.rs  design.md  scratch_pad.md
src/Ilúvatar/fs_policy_power_of_two/src/: bpf.rs
src/Ilúvatar/fs_policy_powof2/: Cargo.toml  build.rs  design.md  open_obj_issue.md
src/Ilúvatar/fs_policy_powof2/src/: bpf.rs  main.rs
src/Ilúvatar/fs_policy_tsksz/: Cargo.toml  design.md  schedstats.md  todos.md  verification.md
src/Ilúvatar/fs_policy_tsksz/src/: bpf.rs  main.rs
src/Ilúvatar/iluvatar_bpf_library/: Cargo.toml  build.rs  imp_files.md
src/Ilúvatar/iluvatar_bpf_library/src/: lib.rs
src/Ilúvatar/iluvatar_controller/: Cargo.toml  build.rs
src/Ilúvatar/iluvatar_controller/src/: controller.json  main.rs
src/Ilúvatar/iluvatar_controller_library/: Cargo.toml  build.rs
src/Ilúvatar/iluvatar_controller_library/src/: lib.rs
src/Ilúvatar/iluvatar_energy_mon/: Cargo.toml
src/Ilúvatar/iluvatar_energy_mon/src/: main.rs  read.rs  structs.rs
src/Ilúvatar/iluvatar_fine_scheduler/: .gitignore  Cargo.toml  build.rs  shared_mem_ipc.md  todo.md
src/Ilúvatar/iluvatar_fine_scheduler/examples/: characteristics.csv  pids.csv
src/Ilúvatar/iluvatar_fine_scheduler/src/: bpf.rs  lib.rs  main.rs
src/Ilúvatar/iluvatar_fine_scheduling/: Cargo.toml
src/Ilúvatar/iluvatar_http_library/: Cargo.toml
src/Ilúvatar/iluvatar_http_library/src/: handlers.rs  http_server.rs  lib.rs
src/Ilúvatar/iluvatar_lib/: Cargo.toml  build.rs
src/Ilúvatar/iluvatar_lib/src/: lib.rs  macros.rs  transaction.rs  types.rs  utils.rs
src/Ilúvatar/iluvatar_library/: Cargo.toml
src/Ilúvatar/iluvatar_library/iluvatar_derive/: Cargo.toml
src/Ilúvatar/iluvatar_library/src/: api_register.rs  cgroup_interaction.rs  char_map.rs  characteristics_map.rs  clock.rs  cmap_revamp.rs  config.rs  continuation.rs  cpu_interaction.rs  influx.rs  lib.rs  linear_reg.rs  logging.rs  macros.rs  mindicator.rs  ring_buff.rs  threading.rs  tokio_utils.rs  tput_calc.rs  transaction.rs  types.rs
src/Ilúvatar/iluvatar_load_gen/: Cargo.toml  build.rs  test.sh
src/Ilúvatar/iluvatar_load_gen/src/: benchmark.rs  main.rs  scaling.rs  utils.rs
src/Ilúvatar/iluvatar_rpc/: Cargo.toml  build.rs
src/Ilúvatar/iluvatar_rpc/src/: lib.rs
src/Ilúvatar/iluvatar_worker/: Cargo.toml  build.rs
src/Ilúvatar/iluvatar_worker/src/: main.rs  utils.rs  worker.json  worker_jetson.json
src/Ilúvatar/iluvatar_worker_cli/: Cargo.toml
src/Ilúvatar/iluvatar_worker_cli/src/: args.rs  commands.rs  main.rs
src/Ilúvatar/iluvatar_worker_library/: Cargo.toml  build.rs
src/Ilúvatar/iluvatar_worker_library/src/: lib.rs
src/Ilúvatar/iluvatar_worker_library/tests/: concur_mqfq_tests.rs  container_mgr_tests.rs  container_sim_tests.rs  container_tests.rs  gpu_tests.rs  invoker_sim_tests.rs  invoker_tests.rs  mqfq_tests.rs  tar_tests.rs  utils.rs
src/Ilúvatar/ilúvatar_controller/: Cargo.toml  build.rs
src/Ilúvatar/ilúvatar_controller/src/: args.rs  controller.json  controller.rs  main.rs  web_server.rs
src/Ilúvatar/ilúvatar_controller_library/: Cargo.toml
src/Ilúvatar/ilúvatar_controller_library/src/: lib.rs
src/Ilúvatar/ilúvatar_energy_mon/: Cargo.toml
src/Ilúvatar/ilúvatar_energy_mon/src/: config.rs  main.rs  read.rs  structs.rs
src/Ilúvatar/ilúvatar_lib/: Cargo.toml
src/Ilúvatar/ilúvatar_lib/src/: lib.rs  logging.rs  macros.rs  transaction.rs
src/Ilúvatar/ilúvatar_library/: Cargo.toml
src/Ilúvatar/ilúvatar_library/src/: api_register.rs  influx.rs  (+9 more)
src/Ilúvatar/ilúvatar_load_gen/: Cargo.toml  build.rs
src/Ilúvatar/ilúvatar_worker/: Cargo.toml  build.rs
src/Ilúvatar/ilúvatar_worker_cli/: Cargo.toml
src/Ilúvatar/ilúvatar_worker_library/: Cargo.toml  build.rs
src/Ilúvatar/load_balancer/: Cargo.toml  build.rs
src/Ilúvatar/load_gen/: Cargo.toml
src/Ilúvatar/testbed/: Cargo.toml
src/Ilúvatar/vmlinux/: Readme.md
src/Ilúvatar/worker/: Cargo.toml  build.rs
src/Ilúvatar/worker_cli/: Cargo.toml
src/Ilúvatar/worker_load/: Cargo.toml
(+722 files in other folders)
