[workspace]

# [package]
# name = "Ilúvatar"
# version = "0.1.0"
# edition = "2021"
# authors = ["Alex Fuerst alfuerst@iu.edu"]

members = [
  "ilúvatar_worker",
  "ilúvatar_worker_cli",
  "ilúvatar_load_gen",
  "ilúvatar_controller_library",
  "ilúvatar_controller",
  "ilúvatar_library",
  "ilúvatar_worker_library",
  "ilúvatar_energy_mon"
]

[profile.dev]
opt-level=0
debug=1
debug-assertions=true
overflow-checks=true
lto=false
incremental=true
strip=false

[profile.release]
opt-level=3
codegen-units=1
lto=true
debug=0
debug-assertions=false
overflow-checks=false
incremental=false
strip=true
panic="abort"

[profile.tiny]
inherits="release"
opt-level='z'
lto=true
debug=0
debug-assertions=false
overflow-checks=false
incremental=false
strip=true
panic="abort"

[profile.release.package."*"]
opt-level=3
debug=0
debug-assertions=false
overflow-checks=false
incremental=false
strip=true
