[workspace]
members = [
  "iluvatar_worker",
  "iluvatar_worker_cli",
  "iluvatar_load_gen",
  "iluvatar_controller_library",
  "iluvatar_controller",
  "iluvatar_library",
  "iluvatar_worker_library",
  "iluvatar_energy_mon",
  "iluvatar_rpc",
  "iluvatar_library/iluvatar_derive",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Alex Fuerst <alfuerst@iu.edu>"]
edition = "2021"
keywords = ["FaaS", "Function as a Service", "Serverless Computing"]
license = "GPL-3"
readme = "../../README.md"
repository = "https://github.com/COS-IN/iluvatar-faas"
categories = ["science", "simulation"]
description = "A fast, modular, extensible FaaS control plane designed for enabling serverless research."

[profile.dev]
opt-level=0
debug=2
debug-assertions=true
overflow-checks=true
lto=false
incremental=true
strip=false

[profile.spansd]
inherits="dev"

[profile.release]
opt-level=3
codegen-units=4
lto=true
debug=0
debug-assertions=false
overflow-checks=false
incremental=false
strip=true
panic="abort"

[profile.spans]
inherits="release"

[profile.relwdebug]
inherits="release"
debug=true
overflow-checks=true
incremental=true
strip=false

[profile.tiny]
inherits="release"
opt-level='z'
codegen-units=1

[profile.release.package."*"]
opt-level=3
debug=0
debug-assertions=false
overflow-checks=false
incremental=false
strip=true

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
single_match = { level = "allow", priority = 1 }
new_without_default = { level = "allow", priority = 1 }
too_many_arguments = { level = "allow", priority = 1 }
type-complexity = { level = "allow", priority = 1 }
doc-lazy-continuation = { level = "allow", priority = 1 }
doc-overindented-list-items = { level = "allow", priority = 1 }
upper-case-acronyms = { level = "allow", priority = 1 }
from_over_into = "deny"
redundant-field-names = "deny"
suspicious = "deny"
correctness = "deny"
perf = "deny"
