[package]
name = "fs_policy_locality"
version = "0.0.1"
authors = ["Abdul Rehman <abdulrehmanee010@gmail.com>", ""]
edition = "2021"
description = "Sched Ext based scheduler policy for fine grain scheduling"
license = "GPL-2.0-only"

#[lib]
#crate-type = ["dylib"]

[dependencies]
iluvatar_library = { path = "../iluvatar_library" }
iluvatar_worker_library = { path = "../iluvatar_worker_library" }
anyhow = "1.0.65"
ctrlc = { version = "3.1", features = ["termination"] }
libbpf-rs = "0.23"
libc = "0.2.85"
scx_utils = "0.7"
scx_rustland_core = "0.2"

csv = "1.3.0"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
clap = { version = "4.5.4", features = ["derive"] }

shmem-ipc = "0.3.0"
dbus = "0.9.2"
dbus-crossroads = "0.3"
criterion = { version = "0.3", features = ["html_reports"] }
ipc-channel = { version = "0.18.1", features = ["memfd"] }

[build-dependencies]
scx_utils =  "0.7" 
scx_rustland_core = "0.2" 

[features]
enable_backtrace = []
