[package]
name = "iluvatar_bpf_library"
description = "Collection of code to be used in context of bpf, but can also be referenced by other parts of the codebase."
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[build-dependencies]
libbpf-cargo = { version = "0.24.4" }
vmlinux = { path = "../vmlinux" }

[dependencies]
anyhow = "1.0"
libbpf-rs = { version = "0.24.4" }

[dev-dependencies]
rstest = "0.13.0"

[features]
static = ["libbpf-rs/static"]




