[package]
name = "iluvatar_controller"
description = "A controller to be an entry point to a cluster of workers that primarily load-balances invocations between them."
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
iluvatar_library = { path = "../iluvatar_library" }
iluvatar_rpc = { path = "../iluvatar_rpc" }
iluvatar_controller_library = { path = "../iluvatar_controller_library" }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "test-util", "parking_lot"] }
anyhow = "1"
tonic = "0.12"
tikv-jemallocator = "0.6"

[lints]
workspace = true