[package]
name = "iluvatar_controller_library"
description = "Collection of code to be used by the controller, but can also be referenced by other parts of the codebase."
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
iluvatar_library = { path = "../iluvatar_library" }
iluvatar_worker_library = { path = "../iluvatar_worker_library" }
iluvatar_rpc = { path = "../iluvatar_rpc" }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "test-util", "parking_lot"] }
lazy_static = "1.4.0"
anyhow = "1.0.13"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.81"
parking_lot = "0.12.1"
config = "0.13"
clap = "4.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dashmap = "6.0"
tracing = "0.1"
tonic = "0.11"

[dev-dependencies]
rstest = "0.13.0"

[features]
full_spans = []
