[package]
name = "iluvatar_controller_library"
description = "Collection of code to be used by the controller, but can also be referenced by other parts of the codebase."
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
iluvatar_library = { path = "../iluvatar_library" }
iluvatar_worker_library = { path = "../iluvatar_worker_library" }
iluvatar_rpc = { path = "../iluvatar_rpc" }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "test-util", "parking_lot"] }
lazy_static = "1.5"
anyhow = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
parking_lot = "0.12"
dashmap = { version = "6", features = ["inline"] }
tracing = "0.1"
tonic = "0.12"
hashring = "*"
ordered-float = "3.9.2"
statrs = { version="0.18", features = ["rand"] }
rand = "0.8.5"
guid-create = "0.*"
rcu_cell = "1.2"

[features]
full_spans = []

[lints]
workspace = true