[package]
name = "iluvatar_energy_mon"
description = "A CLI that can perform the same energy monitoring that the worker does"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
iluvatar_library = { path = "../iluvatar_library" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0.13"
clap = { version = "4.1", features = ["derive"] }
tokio = "1.19"
tracing = "0.1"
