[package]
name = "iluvatar_fine_scheduler"
version = "0.0.1"
authors = ["Abdul Rehman <abdulrehmanee010@gmail.com>", ""]
edition = "2021"
description = "Sched Ext based scheduler policy for fine grain scheduling"
license = "GPL-2.0-only"

#[lib]
#crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.65"
ctrlc = { version = "3.1", features = ["termination"] }
libbpf-rs = "0.23"
libc = "0.2.137"
scx_utils = "0.7"
scx_rustland_core = "0.2"

[build-dependencies]
scx_utils =  "0.7" 
scx_rustland_core = "0.2" 

[features]
enable_backtrace = []
