[package]
name = "iluvatar_fine_scheduler"
version = "0.0.1"
authors = ["Abdul Rehman <abdulrehmanee010@gmail.com>", ""]
edition = "2021"
description = "Sched Ext based scheduler policy for fine grain scheduling"
license = "GPL-2.0-only"

#[lib]
#crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.65"
ctrlc = { version = "3.1", features = ["termination"] }
libbpf-rs = "0.23"
libc = "0.2.85"
scx_utils = "0.7"
scx_rustland_core = "0.2"
memfd = "0.4.0"
memmap2 = "0.5.8"
# Zerocopy depends on proc-macro2 and syn, so having "thiserror" as a
# dependency does not add too much compilation time.
thiserror = "1"
zerocopy = "0.3"
byteorder = "1.4"
shmem-ipc = "0.3.0"
csv = "1.3.0"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
scx_utils =  "0.7" 
scx_rustland_core = "0.2" 

[features]
enable_backtrace = []
