[package]
name = "iluvatar_lib"
version = "0.1.0"
edition = "2021"
authors = ["Alex Fuerst alfuerst@iu.edu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
prost = "0.10"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "test-util"] }
lazy_static = "1.4.0"
anyhow = "1.0.13"
log = "0.4.17"

[build-dependencies]
tonic-build = "0.7.2"

[dev-dependencies]
rstest = "0.13.0"