[package]
name = "iluvatar_lib"
version = "0.1.0"
edition = "2021"
authors = ["Alex Fuerst alfuerst@iu.edu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
prost = "0.10"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "test-util"] }
lazy_static = "1.4.0"
anyhow = "1.0.13"
log = "0.4.17"
guid-create = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
parking_lot = "0.12.1"
config = "0.13.1"
inotify = "0.10.0"
containerd-client = "0.2.0"
prost-types = "0.9.0"
oci-spec = "0.5.1"
sha2="0.10.2"
hex = "0.4.3"
clap = "2"

[build-dependencies]
tonic-build = "0.7.2"

[dev-dependencies]
rstest = "0.13.0"