[package]
name = "iluvatar_library"
description = "Generic code not specific to any piece of the platform."
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
anyhow = "1"
guid-create = "0.*"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = [ "formatting" ] }
tzdb = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "tracing-log", "parking_lot", "env-filter"] }
tracing-appender = "0.2"
tracing-flame="0.2"
pin-project = "1"
dashmap = "6"
parking_lot = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "sync", "parking_lot", "signal"] }
ordered-float = "5"
bitflags = { version="2", features=["serde"] }
http = "1"
influxdb2 = { version = "0.5", default-features = false, features = ["rustls"]}
num-traits = "0.2"
async-process = "2"
num_cpus = "1.16"
config = "0.15"

[dev-dependencies]
rstest = "0.24"
float-cmp = "0.10"
nix = { version = "0.29", features = ["process", "signal"] }
enum-iterator = "2.1"

[features]
full_spans = []
