[package]
name = "iluvatar_load_gen"
description = "A load generation CLI that can run against a worker or controller"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
iluvatar_library = { path = "../iluvatar_library" }
iluvatar_controller_library = { path = "../iluvatar_controller_library" }
iluvatar_worker_library = { path = "../iluvatar_worker_library" }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
clap = { version = "4.1", features = ["derive"] }
tonic = "0.7.2"
prost = "0.10"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "test-util", "parking_lot"] }
anyhow = "1.0.13"
futures = "0.3.21"
csv = "1.1"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
lazy_static = "1.4.0"
actix-web = "4"
rand = "0.8"
