[package]
name = "iluvatar_load_gen"
description = "A load generation CLI that can run against a worker or controller"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
iluvatar_library = { path = "../iluvatar_library" }
iluvatar_rpc = { path = "../iluvatar_rpc" }
iluvatar_controller_library = { path = "../iluvatar_controller_library" }
iluvatar_worker_library = { path = "../iluvatar_worker_library" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "test-util", "parking_lot"] }
anyhow = "1"
csv = "1.3"
lazy_static = "1.5"
rand = "0.9"
tracing = "0.1"

[lints]
workspace = true