[package]
name = "iluvatar_rpc"
description = "Collection of shared RPC structs and code."
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
iluvatar_library = { path = "../iluvatar_library" }
tonic = "0.12"
prost = "0.13"
anyhow = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.81"
clap = "4.5"

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true