[package]
name = "iluvatar_worker"
description = "Executes and manages isolation for function invocations on a particular node."
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iluvatar_library = { path = "../iluvatar_library" }
iluvatar_worker_library = { path = "../iluvatar_worker_library" }
serde = { version = "1.0", features = ["derive"] }
tonic = "0.7.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "test-util", "parking_lot"] }
anyhow = "1.0.13"
clap = { version = "4.1", features = ["derive"] }
tracing = "0.1"
memfd = "0.4.0"
memmap2 = "0.5.8"
# Zerocopy depends on proc-macro2 and syn, so having "thiserror" as a
# dependency does not add too much compilation time.
thiserror = "1"
zerocopy = "0.3"
libc = "0.2.85"
byteorder = "1.4"
shmem-ipc = "0.3.0"
shared_memory = "0.12.5"


