[package]
name = "iluvatar_worker_library"
description = "Collection of code to be used by the worker, but can also be referenced by other parts of the codebase."
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
iluvatar_library = { path = "../iluvatar_library" }
tonic = "0.7.2"
prost = "0.10"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "test-util", "sync", "parking_lot"] }
lazy_static = "1.4.0"
anyhow = "1.0.13"
guid-create = "0.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.81"
parking_lot = "0.12.1"
config = "0.13"
inotify = "0.10.2"
containerd-client = "0.2.0"
prost-types = "0.9.0"
oci-spec = "0.5.1"
sha2="0.10.2"
hex = "0.4.3"
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
dashmap = "5.3.4"
tracing = "0.1"
actix-web = "4"
futures = "0.3"
time = "0.3"
ordered-float = "3.4.0"
tzdb = "0.4"
csv = "1.1"
influxdb2 = "0.4"
num-traits = "0.2"
influxdb2-structmap = "0.2"
rand = "0.8"

[build-dependencies]
tonic-build = "0.7.2"
prost-build = "0.11"

[dev-dependencies]
rstest = "0.13.0"
async-std = { version = "1.5", features = ["attributes"] }
anyhow = { version = "1.0.13", features = ["backtrace"] }
reqwest = { version = "0.11.11", features = ["json"] }
more-asserts = "0.3"
rand = "0.8"

[features]
full_spans = []
power_cap = []
