[package]
name = "iluvatar_worker_library"
description = "Collection of code to be used by the worker, but can also be referenced by other parts of the codebase."
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
axum = { version = "0.7"}
iluvatar_library = { path = "../iluvatar_library" }
iluvatar_rpc = { path = "../iluvatar_rpc" }
tonic = "0.12"
tokio = { version = "1.*", features = ["macros", "rt-multi-thread", "test-util", "sync", "parking_lot"] }
lazy_static = "1.*"
anyhow = "1.*"
guid-create = "0.*"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.81"
parking_lot = "0.12.1"
inotify = "0.11"
containerd-client = "0.6.0"
oci-spec = "0.*"
sha2="0.10.2"
hex = "0.4.3"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
dashmap = { version = "6", features = ["inline"] }
tracing = "0.1"
futures = "0.3"
time = "0.3"
ordered-float = "4"
csv = "1.*"
influxdb2 = { version = "0.5", default-features = false, features = ["rustls"]}
num-traits = "0.2"
influxdb2-structmap = "0.2"
rand = "0.9"
nvml-wrapper = "0.10"
bollard = "0.18"
prost-types = "0.13"
num_cpus = "1.16"
async-trait = "0.1"

[dev-dependencies]
rstest = "0.25"
anyhow = { version = "1", features = ["backtrace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
more-asserts = "0.3"
rand = "0.9"
tokio-test = "0.4"

[features]
full_spans = []
power_cap = []

[lints]
workspace = true