[package]
name = "ilúvatar_controller"
version = "0.1.0"
edition = "2021"
authors = ["Alex Fuerst alfuerst@iu.edu"]

[dependencies]
actix-web = "4"
iluvatar_lib = { path = "../ilúvatar_lib" }
log = "0.4.17"
anyhow = "1.0.13"
parking_lot = "0.12.1"
serde_json = "1.0.81"
dashmap = "5.3.4"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "test-util"] }
clap = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "tracing-log", "parking_lot"] }
tracing-appender = "0.2.2"
