[package]
name = "ilúvatar_controller"
version = "0.1.0"
edition = "2021"
authors = ["Alex Fuerst alfuerst@iu.edu"]

[dependencies]
actix-web = "4"
iluvatar_library = { path = "../ilúvatar_library" }
iluvatar_controller_library = { path = "../ilúvatar_controller_library" }
clap = "3"
tracing = "0.1"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "test-util", "parking_lot"] }
anyhow = "1.0.13"
