[package]
name = "ilúvatar_energy_mon"
version = "0.1.0"
edition = "2021"
authors = ["Alex Fuerst alfuerst@iu.edu"]

[dependencies]
iluvatar_library = { path = "../ilúvatar_library" }
time = { version = "0.3.13", features = ["serde", "serde-well-known"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0.13"
clap = { version = "3", features = ["derive"] }
