[package]
name = "iluvatar_library"
version = "0.1.0"
edition = "2021"
authors = ["Alex Fuerst alfuerst@iu.edu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.13"
guid-create = "0.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.81"
clap = "2"
reqwest = { version = "0.11.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "tracing-log", "parking_lot", "env-filter"] }
tracing-appender = "0.2.2"
tracing-flame="0.2"
pin-project = "1"


[dev-dependencies]
rstest = "0.13.0"