[package]
name = "iluvatar_library"
version = "0.1.0"
edition = "2021"
authors = ["Alex Fuerst alfuerst@iu.edu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.13"
guid-create = "0.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.81"
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
time = { version = "0.3", features = [ "formatting" ] }
tzdb = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "tracing-log", "parking_lot", "env-filter"] }
tracing-appender = "0.2.2"
tracing-flame="0.2"
pin-project = "1"
dashmap = "5.3.4"
parking_lot = "0.12.1"
tokio = "1.19"
function_name = "0.3.0"

[dev-dependencies]
rstest = "0.13.0"
