[package]
name = "ilúvatar_load_gen"
version = "0.1.0"
edition = "2021"
authors = ["Alex Fuerst alfuerst@iu.edu"]

[dependencies]
iluvatar_library = { path = "../ilúvatar_library" }
iluvatar_controller_library = { path = "../ilúvatar_controller_library" }
iluvatar_worker_library = { path = "../ilúvatar_worker_library" }
config = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
clap = "3"
tonic = "0.7.2"
prost = "0.10"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "test-util"] }
anyhow = "1.0.13"
futures = "0.3.21"
csv = "1.1"
reqwest = { version = "0.11.11", features = ["json"] }
lazy_static = "1.4.0"
actix-web = "4"
